<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Drive">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Go_Button"
        android:id="@+id/buttonGo"
        android:layout_below="@+id/editTextDrive"
        android:layout_alignEnd="@+id/editTextDrive" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextDrive"
        android:layout_below="@+id/textViewDriveAmount"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/EnterKm"
        android:id="@+id/textViewDriveAmount"
        android:layout_marginTop="100dp" /> />
    <ImageView
        android:src="@mipmap/ic_car"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="#FFFFBB33"
        android:id="@+id/imageView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView2"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/textViewDriveAmount"
        android:layout_below="@+id/buttonGo"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView"
        android:layout_alignBottom="@+id/buttonGo"
        android:layout_alignParentStart="true"
        android:text="@string/DriveLog" />

</RelativeLayout>
